# django_5.2

./: pyproject.toml
playground/: models.py  urls.py  views.py
playground/migrations/: 0001_initial.py
playground/templates/playground/: hello.html
project/: settings.py  urls.py
